--- a/provisioning/ansible/roles/langs/tasks/main.yaml
+++ b/provisioning/ansible/roles/langs/tasks/main.yaml
@@ -67,7 +67,7 @@
       export PATH=/home/isucon/local/php/bin:$PATH
 - name: Install Ruby v2.7.1
   become: yes
-  become_user: root
+  become_user: isucon
   command: /tmp/xbuild/ruby-install 2.7.1 /home/isucon/local/ruby
 
 - name: Add PATH for Ruby
@@ -81,7 +81,7 @@
 
 - name: Install perl v5.32.0
   become: yes
-  become_user: root
+  become_user: isucon
   command: /tmp/xbuild/perl-install 5.32.0 /home/isucon/local/perl -- -Duselongdouble -j 4
 
 - name: Add PATH for perl 
@@ -95,7 +95,7 @@
 
 - name: Install Node v14.9.0
   become: yes
-  become_user: root
+  become_user: isucon
   command: /tmp/xbuild/node-install v14.9.0 /home/isucon/local/node
 
 - name: Add PATH for Node
@@ -110,7 +110,7 @@
 
 - name: Install Go 1.14.7 
   become: yes
-  become_user: root
+  become_user: isucon
   command: /tmp/xbuild/go-install 1.14.7 /home/isucon/local/go
 
 - name: Add PATH for Go
@@ -125,7 +125,7 @@
 
 - name: Install python v3.7.9
   become: yes
-  become_user: root
+  become_user: isucon
   command: /tmp/xbuild/python-install 3.7.9 /home/isucon/local/python
 
 - name: Add PATH for python
